--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,6 @@ body{
     background-color: var(--light-g);
     font-family: Karla,sans-serif;
     font-size: 16px;
-    height: 100vh;
     line-height: 1.4;
     letter-spacing: 0.02rem;
 }
@@ -26,13 +25,18 @@ ul{list-style: none;}
 
 h4{font-weight: 400;}
 
+#container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 650px;
+}
 .wrapper{
     margin: auto;
-    height: 100%;
     display: grid;
     grid-template-columns: 50% 50%;
-    border: 1px solid #ccc;
     justify-content: center;
+    border-radius: 40px;
 }
 
 .section1{
