--- a/css/style.css
+++ b/css/style.css
@@ -36,7 +36,6 @@ h4{font-weight: 400;}
     display: grid;
     grid-template-columns: 50% 50%;
     justify-content: center;
-    border-radius: 40px;
 }
 
 .section1{
@@ -44,6 +43,7 @@ h4{font-weight: 400;}
     grid-column-end: 3;
     padding: 20px 40px;
     background-color: white;
+    border-radius: 10px 10px 0px 0;
 }
 
 .section1 h1{
@@ -66,6 +66,7 @@ h4{font-weight: 400;}
     color: white;
     padding: 40px;
     background-color: var(--cyan);
+    border-radius: 0px 0px 0px 10px;
 }
 
 .section2 h4{
@@ -104,6 +105,7 @@ h4{font-weight: 400;}
     color: white;
     padding: 40px;
     background-color: var(--l-cyan);
+    border-radius: 0px 0px 10px 0px;
 }
 
 .section3 h4{
